continuing work on desktop portion with css grid.

--- a/index.html
+++ b/index.html
@@ -19,22 +19,22 @@
       <p>Our Artificial Intelligence powered tools use millions of project data points 
       to ensure that your project is successful</p>
     </div>
-    <div class="cards top-border-cyan">
+    <div class="cards card-cyan top-border-cyan">
       <h3>Supervisor</h3>
       <p>Monitors activity to identify project roadblocks</p>
       <img src="images/icon-supervisor.svg" alt="">
     </div>
-    <div class="cards top-border-red">  
+    <div class="cards card-red top-border-red">  
       <h3>Team Builder</h3>
       <p>Scans our talent network to create the optimal team for your project</p>
       <img src="images/icon-team-builder.svg" alt="">
     </div>
-    <div class="cards top-border-orange">  
+    <div class="cards card-orange top-border-orange">  
       <h3>Karma</h3>
       <p>Regularly evaluates our talent to ensure quality</p>
       <img src="images/icon-karma.svg" alt="">
     </div>
-    <div class="cards top-border-blue">
+    <div class="cards card-blue top-border-blue">
       <h3>Calculator</h3>
       <p>data from past projects to provide better delivery estimates</p>
       <img src="images/icon-calculator.svg" alt="">
