--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   <footer>
     <p>
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#" target="_blank">Christopher C. Intriago</a>.
+      Coded by <a href="https://github.com/chintriago" target="_blank">Christopher C. Intriago</a>.
     </p>
   </footer>
 </body>
