--- a/index.html
+++ b/index.html
@@ -8,17 +8,18 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;600&display=swap" rel="stylesheet">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/styles.css">
   <title>Frontend Mentor | Four card feature section</title>
 </head>
 <body>
+  <header>
+    <h1>Reliable, efficient delivery
+    <span>Powered by Technology</span>       
+    </h1>
+    <p>Our Artificial Intelligence powered tools use millions of project data points 
+    to ensure that your project is successful</p>
+  </header>
   <main>
-    <div class="header">
-      <h1>Reliable, efficient delivery</h1>
-      <h2>Powered by Technology</h2>
-      <p>Our Artificial Intelligence powered tools use millions of project data points 
-      to ensure that your project is successful</p>
-    </div>
     <div class="cards card-cyan top-border-cyan">
       <h3>Supervisor</h3>
       <p>Monitors activity to identify project roadblocks</p>
@@ -40,11 +41,5 @@
       <img src="images/icon-calculator.svg" alt="">
     </div>  
   </main>  
-  <footer>
-    <p>
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="https://github.com/chintriago" target="_blank">Christopher C. Intriago</a>.
-    </p>
-  </footer>
 </body>
 </html>
